--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
     <p>This is my first GitHub Pages website 🎉</p>
   </body>
 </html>
+<img src="Sloth.jpg" alt="Sloth Image" width="300">
+</body>
+</html>
