--- a/index.html
+++ b/index.html
@@ -1,13 +1,122 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to House of Sloth</title>
-  </head>
-  <body>
-    <h1>Hello from House of Sloth!</h1>
-    <p>This is my first GitHub Pages website 🎉</p>
-  </body>
-</html>
-<img src="Sloth.jpg" alt="Sloth Image" width="300">
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>House of Sloth - Store</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+
+    header {
+      background-color: #3e3e3e;
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 2rem;
+    }
+
+    h1 {
+      margin-bottom: 0.5rem;
+    }
+
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+
+    .product {
+      background-color: white;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .product img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+
+    .product h3 {
+      margin: 0.5rem 0;
+    }
+
+    .product p {
+      color: #666;
+    }
+
+    .buy-button {
+      background-color: #28a745;
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 0.5rem;
+    }
+
+    .buy-button:hover {
+      background-color: #218838;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>House of Sloth</h1>
+    <p>Your chillest shopping experience</p>
+  </header>
+
+  <div class="container">
+    <h2>Our Products</h2>
+
+    <div class="product-grid">
+      <!-- Product 1 -->
+      <div class="product">
+        <img src="sloth.jpg" alt="Sloth Product">
+        <h3>Chill Sloth Plush</h3>
+        <p>$19.99</p>
+        <a href="https://wa.me/yourwhatsappnumber" class="buy-button">Buy Now</a>
+      </div>
+
+      <!-- Product 2 -->
+      <div class="product">
+        <img src="product2.jpg" alt="Another Product">
+        <h3>Lazy Hoodie</h3>
+        <p>$34.99</p>
+        <a href="https://wa.me/yourwhatsappnumber" class="buy-button">Buy Now</a>
+      </div>
+
+      <!-- Add more products below -->
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 House of Sloth. All rights reserved.
+  </footer>
+
 </body>
 </html>
