--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <header>
     <h1>House of Sloth</h1>
-    <p>Your chillest shopping experience</p>
+    <p>Effortless Shopping. Sloth-Approved</p>
   </header>
 
   <div class="container">
