--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      font-family: Pacifico;
+      font-family: Lucida Console;
       background-color: #f8f9fa;
       color: #333;
     }
