--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       margin: 0;
       font-family: Lucida Console;
       background-color: #f8f9fa;
-      color: #333;
+      color: #ffffff;
     }
 
     header {
-      background-color: #3e3e3e;
+      background-color: #1e1e2f;
       color: white;
       text-align: center;
       padding: 1rem 0;
