--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Lucida Console;
       background-color: #f8f9fa;
-      color: #ffffff;
+      color: #000080;
     }
 
     header {
