--- a/index.html
+++ b/index.html
@@ -120,3 +120,42 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>House of Sloth</title>
+  <style>
+    body {
+      background-color: #f9f9f9;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      padding: 40px;
+    }
+
+    .logo {
+      width: 60px;         /* Very small image */
+      height: auto;
+      margin-bottom: 10px;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin: 0;
+      color: #333;
+    }
+
+    p {
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Replace 'sloth.jpg' with your actual image filename -->
+  <img src="Sloth.jpg" alt="Logo" class="logo">
+
+  <h1>House of Sloth</h1>
+  <p>Get your shopping chilled</p>
+
+</body>
+</html>
