--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Lucida Console;
-      background-color: #f8f9fa;
+      background-color: #ffffff;
       color: #000080;
     }
 
