--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       margin: 0;
       font-family: Lucida Console;
       background-color: #ffffff;
-      color: #000080;
+      color: ##000080;
     }
 
     header {
-      background-color: #1e1e2f;
+      background-color: #2e7d32;
       color: white;
       text-align: center;
       padding: 1rem 0;
