--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +7,27 @@
   <style>
     body {
       margin: 0;
-      font-family: Lucida Console;
+      font-family: "Lucida Console", monospace;
       background-color: #ffffff;
-      color: ##000080;
+      color: #000080;
     }
 
     header {
-      background-color: #2e7d32;
-      color: white;
+      background-color: #000080; /* dark background for white text contrast */
       text-align: center;
-      padding: 1rem 0;
+      padding: 2rem 1rem;
+    }
+
+    header .logo {
+      width: 60px;
+      height: auto;
+      margin-bottom: 10px;
+    }
+
+    header h1,
+    header p {
+      color: #ffffff; /* pure white text */
+      margin: 0.5rem 0;
     }
 
     .container {
@@ -26,8 +36,10 @@
       padding: 2rem;
     }
 
-    h1 {
-      margin-bottom: 0.5rem;
+    h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      color: #000080;
     }
 
     .product-grid {
@@ -86,8 +98,10 @@
 <body>
 
   <header>
+    <!-- Replace with your actual logo image file -->
+    <img src="Sloth.jpg" alt="Logo" class="logo">
     <h1>House of Sloth</h1>
-    <p>Effortless Shopping. Sloth-Approved</p>
+    <p>Effortless Shopping. Sloth-Approved.</p>
   </header>
 
   <div class="container">
@@ -96,7 +110,7 @@
     <div class="product-grid">
       <!-- Product 1 -->
       <div class="product">
-        <img src="sloth.jpg" alt="Sloth Product">
+        <img src="sloth.jpg" alt="Sloth Plush">
         <h3>Chill Sloth Plush</h3>
         <p>$19.99</p>
         <a href="https://wa.me/yourwhatsappnumber" class="buy-button">Buy Now</a>
@@ -104,58 +118,19 @@
 
       <!-- Product 2 -->
       <div class="product">
-        <img src="product2.jpg" alt="Another Product">
+        <img src="product2.jpg" alt="Lazy Hoodie">
         <h3>Lazy Hoodie</h3>
         <p>$34.99</p>
         <a href="https://wa.me/yourwhatsappnumber" class="buy-button">Buy Now</a>
       </div>
 
-      <!-- Add more products below -->
+      <!-- Add more products as needed -->
     </div>
   </div>
 
   <footer>
     &copy; 2025 House of Sloth. All rights reserved.
   </footer>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <title>House of Sloth</title>
-  <style>
-    body {
-      background-color: #f9f9f9;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding: 40px;
-    }
-
-    .logo {
-      width: 60px;         /* Very small image */
-      height: auto;
-      margin-bottom: 10px;
-    }
-
-    h1 {
-      font-size: 2.5em;
-      margin: 0;
-      color: #333;
-    }
-
-    p {
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Replace 'sloth.jpg' with your actual image filename -->
-  <img src="Sloth.jpg" alt="Logo" class="logo">
-
-  <h1>House of Sloth</h1>
-  <p>Get your shopping chilled</p>
 
 </body>
 </html>
